# fmridataset

./: .Rbuildignore  .gitignore  .lintr  404.html  AGENTS.md  API_SAFETY_ANALYSIS.html  API_SAFETY_ANALYSIS.md  BACKEND_REGISTRY_SUMMARY.html  BACKEND_REGISTRY_SUMMARY.md  BIDS_FACADE_TESTING.md  CLAUDE.html  CLAUDE.md  CONTRIBUTING.html  CONTRIBUTING.md  CRAN_guidance.html  DESCRIPTION  DOCUMENTATION_FIXES_SUMMARY.md  NAMESPACE  NEWS.md  README.md  REFACTORING_SUMMARY.md  SECURITY.html  SECURITY.md  TEST_REFACTORING_NOTES.md  _pkgdown.yml  authors.html  authors.md  backend-development-basics.html  backend-development-basics.md  bids_plan.md  codecov.yml  codemeta.json  cran-comments.md  fmridataset_cheatsheet_v3.html  fmridataset_cheatsheet_v3.md  fmrilatent_plan.md  fmristore_repomix.xml  index.html  index.md  llms.txt  (+5 more)
python/: README.md  pyproject.toml
python/src/fmridataset/: __init__.py  backend_protocol.py  (+17 more)
python/tests/: conftest.py  test_backend_registry.py  test_conversions.py  test_data_chunks.py  test_dataset.py  test_dataset_properties.py  test_errors.py  test_fmri_group.py  test_fmri_series.py  test_fmri_series_query.py  test_h5_backend.py  test_latent_backend.py  test_latent_dataset.py  test_lazy_array.py  test_mask_utils.py  test_matrix_backend.py  test_nifti_backend.py  test_parity_data_chunks.py  test_parity_dataset.py  test_parity_matrix_backend.py  test_parity_sampling_frame.py  test_sampling_frame.py  test_selectors.py  test_selectors_extended.py  test_study_backend.py  test_study_dataset.py  test_study_dataset_access.py  test_zarr_backend.py
(+898 files in other folders)
